<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/kite_one"
        android:padding="3dp"
        android:text="@string/introduction"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:fontFamily="@font/kalam_bold"
            android:padding="8dp"
            android:text="@string/features"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/Appleview"
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/apple" />

        <TextView
            android:id="@+id/AppleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/CApple" />

        <Button
            android:id="@+id/AppleWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/Samsungview"
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/samsung" />

        <TextView
            android:id="@+id/SamsungText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/CSamsung" />

        <Button
            android:id="@+id/SamsungWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/Huaweiview"
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/huawei" />

        <TextView
            android:id="@+id/HuaweiText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/CHuawei" />

        <Button
            android:id="@+id/HuaweiWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/XiaoMiview"
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/xiaomi" />

        <TextView
            android:id="@+id/XiaoMiText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/CXiaomi" />

        <Button
            android:id="@+id/XiaoMiWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/Oppoview"
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/oppo" />

        <TextView
            android:id="@+id/OppoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/COppo" />

        <Button
            android:id="@+id/OppoWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website" />
    </LinearLayout>

    <Button
        android:id="@+id/GITHUB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/Vgithub" />

    <Button
        android:id="@+id/View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Vlist" />

</LinearLayout>
